Moved build instructions.